<resources>
    <string name="app_name">Parqueadero</string>

    <!--Activity Splash-->
    <string name="view_splash">Registro de Vehiculos en un Parqueadero</string>

    <!--Activity Principal-->
    <string name="btn_registro">Registro</string>
    <string name="btn_capacidad">Capacidad</string>
    <string name="btn_informe">Informe</string>
    <string name="btn_salida">Salida</string>

    <!--Fragment FragmentRegistro-->
    <string name="viewUno">AUTOS</string>
    <string name="view_autos_dis">Autos disponibles: 0</string>
    <string name="view_autos_actuales">Autos actuales: 0</string>
    <string name="viewDos">MOTOS</string>
    <string name="view_motos_dip">Motos disponibles: 0</string>
    <string name="view_motos_actuales">Motos actuales: 0</string>
    <string name="radio_entrada">Entrada</string>
    <string name="radio_salida">Salida</string>
    <string name="btn_registra_archivo">Registrar</string>

    <!--Fragment FragmentCapacidad-->
    <string name="view_max_autos">Máxima capacidad de autos.</string>
    <string name="view_capacidad_autos">0</string>
    <string name="view_max_motos">Máxima capacidad de motos.</string>
    <string name="view_capacidad_motos">0</string>
    <string name="btn_config_autos">Configurar autos</string>
    <string name="btn_config_motos">Configurar motos</string>

    <!--Fragment FragmentInforme-->
    <string name="btn_lista_entradas">Entradas</string>
    <string name="btn_lista_salidas">Salidas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
