<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRegistro">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/view_autos_dis"
        android:layout_width="272dp"
        android:layout_height="53dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="19dp"
        android:text="@string/view_autos_dis"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/view_motos_dis"
        android:layout_width="272dp"
        android:layout_height="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/view_autos_dis"
        android:layout_marginTop="93dp"
        android:text="@string/view_motos_dip"
        android:textSize="18sp"/>

    <Spinner
        android:id="@+id/spinner_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="228dp" />

    <RadioGroup
        android:id="@+id/radio_group_ent_sal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="112dp">

        <RadioButton
            android:id="@+id/radio_entrada"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_entrada"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_salida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_salida"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_registra_archivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="31dp"
        android:text="@string/btn_registra_archivo" />

</RelativeLayout>